// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ilib-scriptinfo simple package loading CommonJS module loading works 1`] = `
"Lifecycle scripts:
  start
    node index.js

Commands of the root workspace project (to run them, use "pnpm -w run"):
  build
    turbo build
  postinstall
    cp git-hooks/* .git/hooks/
  coverage
    turbo coverage
  coverage:affected
    turbo coverage --affected
  coverage:ci:affected
    turbo coverage --concurrency=5 --affected
  test
    pnpm test:affected
  test:affected
    turbo test --affected --output-logs=new-only
  test:all
    turbo test
  test:all:force
    turbo test --force
  test:ci
    turbo test --concurrency=5
  test:ci:affected
    pnpm test:ci --affected
  test:e2e
    pnpm test:e2e:affected
  test:e2e:affected
    turbo test:e2e --affected --output-logs=new-only
  test:e2e:all
    turbo test:e2e
  test:e2e:all:force
    turbo test:e2e --force
  test:e2e:ci
    turbo test:e2e --concurrency=5
  test:e2e:ci:affected
    turbo test:e2e --concurrency=5 --affected
  doc
    pnpm -F '[origin/main]' doc
  release
    pnpm build && pnpm changeset publish
  run:loctool
    NODE_PATH=packages node --inspect packages/loctool/loctool.js
  run:lint
    NODE_PATH=packages node --inspect packages/ilib-lint/src/index.js
  run:samples
    pnpm -F '{packages/*/samples/*}' run:sample
  run:samples:affected
    pnpm -F '{packages/*/samples/*}[origin/main]' run:sample
"
`;

exports[`ilib-scriptinfo simple package loading ESM module loading works 1`] = `
"Lifecycle scripts:
  start
    node index.js

Commands of the root workspace project (to run them, use "pnpm -w run"):
  build
    turbo build
  postinstall
    cp git-hooks/* .git/hooks/
  coverage
    turbo coverage
  coverage:affected
    turbo coverage --affected
  coverage:ci:affected
    turbo coverage --concurrency=5 --affected
  test
    pnpm test:affected
  test:affected
    turbo test --affected --output-logs=new-only
  test:all
    turbo test
  test:all:force
    turbo test --force
  test:ci
    turbo test --concurrency=5
  test:ci:affected
    pnpm test:ci --affected
  test:e2e
    pnpm test:e2e:affected
  test:e2e:affected
    turbo test:e2e --affected --output-logs=new-only
  test:e2e:all
    turbo test:e2e
  test:e2e:all:force
    turbo test:e2e --force
  test:e2e:ci
    turbo test:e2e --concurrency=5
  test:e2e:ci:affected
    turbo test:e2e --concurrency=5 --affected
  doc
    pnpm -F '[origin/main]' doc
  release
    pnpm build && pnpm changeset publish
  run:loctool
    NODE_PATH=packages node --inspect packages/loctool/loctool.js
  run:lint
    NODE_PATH=packages node --inspect packages/ilib-lint/src/index.js
  run:samples
    pnpm -F '{packages/*/samples/*}' run:sample
  run:samples:affected
    pnpm -F '{packages/*/samples/*}[origin/main]' run:sample
"
`;

exports[`ilib-scriptinfo simple package loading TypeScript module loading works 1`] = `
"Lifecycle scripts:
  start
    tsx index.ts

Commands of the root workspace project (to run them, use "pnpm -w run"):
  build
    turbo build
  postinstall
    cp git-hooks/* .git/hooks/
  coverage
    turbo coverage
  coverage:affected
    turbo coverage --affected
  coverage:ci:affected
    turbo coverage --concurrency=5 --affected
  test
    pnpm test:affected
  test:affected
    turbo test --affected --output-logs=new-only
  test:all
    turbo test
  test:all:force
    turbo test --force
  test:ci
    turbo test --concurrency=5
  test:ci:affected
    pnpm test:ci --affected
  test:e2e
    pnpm test:e2e:affected
  test:e2e:affected
    turbo test:e2e --affected --output-logs=new-only
  test:e2e:all
    turbo test:e2e
  test:e2e:all:force
    turbo test:e2e --force
  test:e2e:ci
    turbo test:e2e --concurrency=5
  test:e2e:ci:affected
    turbo test:e2e --concurrency=5 --affected
  doc
    pnpm -F '[origin/main]' doc
  release
    pnpm build && pnpm changeset publish
  run:loctool
    NODE_PATH=packages node --inspect packages/loctool/loctool.js
  run:lint
    NODE_PATH=packages node --inspect packages/ilib-lint/src/index.js
  run:samples
    pnpm -F '{packages/*/samples/*}' run:sample
  run:samples:affected
    pnpm -F '{packages/*/samples/*}[origin/main]' run:sample
"
`;
